# openinput

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  Makefile  README.md  configure-oss-fuzz.py  configure.py  meson.build  noxfile.py  setup.cfg
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: build.yml  check.yml  lint.yml  test.yml
build-targets/: README.md  blue-pill.txt  steelseries-rival310.txt
build-targets/family/: stm32f1.txt
build-targets/ld/: rival310-oem-boot.ld  stm32f103cb.ld  stm32f103t6.ld  stm32f103t8.ld  stm32f1_common.ld
build_system/: __init__.py  builder.py  dependencies.py  ninja.py
build_targets/: __init__.py  dependencies.py  families.py  targets.py
build_targets/linker/efm32gg12-generic/: common.ld  efm32gg12bxxxf1024.ld  efm32gg12bxxxf512.ld  sltb009a.ld
build_targets/linker/stm32f1-generic/: bluepill.ld  common.ld  stm32f103t6.ld
config/: base.toml  blue-pill.h  config.h  rival310.h
config/families/: avr.toml  efm32gg12b.toml  fuzz.toml  linux-uhid.toml  sam3u.toml  samx7x.toml  stm32f1.toml  testsuite.toml
config/linker/efm32gg12b/: common.ld  efm32gg12bxxxf1024.ld  efm32gg12bxxxf512.ld
config/linker/efm32gg12b-generic/: efm32gg12bxxxf1024.ld  efm32gg12bxxxf512.ld  sltb009a.ld
config/linker/russian-woodpecker/: russian-woodpecker.ld
config/linker/sam3u/: sam3u1.ld  sam3u2.ld  sam3u4.ld
config/linker/sams70-generic/: big-sammy.ld
config/linker/samx7x/: common.ld  samx7xx19.ld  samx7xx20.ld  samx7xx21.ld
config/linker/stm32f1/: common.ld  stm32f103cb.ld  stm32f103t6.ld
config/linker/stm32f1-generic/: bluepill.ld  rival310.ld  stm32f103cb.ld
config/targets/: atmega32u4-generic.toml  efm32gg12b-generic.toml  fuzz.toml  linux-uhid.toml  russian-woodpecker.toml  sams70-generic.toml  stm32f1-generic.toml  testsuite.toml
docs/: conf.py  index.rst  requirements.txt
docs/contributing/: index.rst  porting.rst  structure.rst
docs/reference/: hals.rst  index.rst
fs_ex/: littlefs  spiffs  tickv
src/: leds.c  leds.h  main.c  systick.c  systick.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h  utils.h
src/al/: startup.c
src/cmsis/st/STM32F1xx/include/: stm32f10x.h
src/driver/pixart/: pixart.h  pixart_pmw.c  pixart_pmw.h
src/drv/mcu/stm32f1/: atomic.h  flash.c  flash.h  gpio.c  gpio.h  nvic.h  rcc.c  rcc.h  spi.c  spi.h  systick.c  systick.h
src/drv/sensor/truemove3/: truemove3.c  truemove3.h
src/hal/: blockdev.h  hid.h  spi.h  ticks.h
src/key_actions/: key_actions.c  key_actions.h
src/platform/: efm32gg12b
src/platform/avr/: boot.c  boot.h  usb.c  usb.h  usb_descriptors.c
src/platform/avr/hal/: hid.c  hid.h
src/platform/efm32gg/: atomic.h  cmu.c  cmu.h  emu.c  emu.h  gpio.c  gpio.h  startup.c  systick.c  usb.c  usb.h  usb_descriptors.c
src/platform/efm32gg/driver/: key_direct.c  key_direct.h  key_matrix.c  key_matrix.h
src/platform/efm32gg/hal/: hid.c
src/platform/generic/: platform-hid.h
src/platform/linux-uhid/: hid.c  hid.h  uhid.c  uhid.h
src/platform/linux-uhid/hal/: hid.c  hid.h
src/platform/sam3u/: eefc.c  eefc.h  exceptions.c  pio.c  pio.h  pmc.c  pmc.h  startup.c  systick.c  systick.h  wdt.c  wdt.h
src/platform/samx7x/: atomic.h  eefc.c  eefc.h  exceptions.c  log.c  pio.c  pio.h  pmc.c  pmc.h  qspi.c  qspi.h  startup.c  systick.c  usb.c  usb.h  usb_descriptors.c  wdt.c
src/platform/samx7x/hal/: blockdev.c  blockdev.h  hid.c  spi.c  spi.h  ticks.c
src/platform/stm32f1/: atomic.h  exceptions.c  flash.c  flash.h  gpio.c  gpio.h  rcc.c  rcc.h  spi.c  spi.h  startup.c  systick.c  systick.h  usb.c  usb.h  usb_descriptors.c
src/platform/stm32f1/driver/: led_pwm.c  led_pwm.h
src/platform/stm32f1/hal/: hid.c  spi.c  spi.h  ticks.c  ticks.h
src/protocol/: protocol.c  protocol.h  reports.h
src/targets/: target.h
src/targets/atmega32u4-generic/: LUFAConfig.h  main.c
src/targets/atmega32u4-generic/config/: octomouse.h  octopus.h  sample.h
src/targets/efm32gg12-generic/: main.c  tusb_config.h
src/targets/efm32gg12-generic/config/: sltb009a.h
src/targets/efm32gg12b-generic/: main.c  tusb_config.h
src/targets/fuzz/: main.c
src/targets/linux-uhid/: main.c
src/targets/rival310/: leds.c  rival310.c  spi_eeprom.c  startup.c
src/targets/russian-woodpecker/: main.c  tusb_config.h
src/targets/russian-woodpecker/config/: russian-woodpecker.h
src/targets/sams70-generic/: main.c  tusb_config.h
src/targets/sams70-generic/config/: big-sammy.h
src/targets/stm32f1/: atomic.h  flash.c  flash.h  gpio.c  nvic.h  spi.c  systick.c
src/targets/stm32f1-generic/: main.c  tusb_config.h
src/targets/stm32f1-generic/config/: bluepill.h  rival310.h
src/targets/testsuite/: main.c
src/util/: data.h  hid_descriptors.h  keycodes.h  log.c  log.h  reports.h  types.h  usb_descriptors.h
src/util/partition/: partition.c  partition.h
targets/: blue-pill.txt  bluepill.mk  rival310.mk
targets/family/: stm32f1.txt
targets/generic/: stm32f1.mk  tinyusb.mk
targets/ld/: bluepill.ld  rival310.ld
tests/: conftest.py  test_protocol.py  unmet-dependencies.py
tests/wrapper/: _testsuite.c  pages.py  setup.py  testsuite.py
tools/: caterina-load.sh  hidraw.py  lshid.py  partition_table.py  steelseries-crc.py  steelseries-flash.py
